# ForgePulse

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy-pages.yml
deploy/nginx/: nginx.conf
deploy/postgres/: init.sql
docs/: architecture.md  data-sources.md  deployment.md  engineering-architecture.md  enterprise-roadmap.md  github-plan.md  mvp-scope.md  progress.md  project-structure.md  technology-stack.md
edge-gateway/: .dockerignore  CMakeLists.txt  Dockerfile
edge-gateway/include/forgepulse/: command_listener.hpp  config.hpp  mqtt_publisher.hpp  telemetry.hpp
edge-gateway/src/: command_listener.cpp  config.cpp  main.cpp  mqtt_publisher.cpp  telemetry.cpp
edge-gateway/tests/: test_edge.cpp
platform-api/: Dockerfile  pyproject.toml  requirements.txt
platform-api/app/: main.py
platform-api/app/api/: router.py
platform-api/app/api/routers/: alarms.py  analytics.py  (+6 more)
platform-api/app/core/: auth.py  config.py  db.py
platform-api/app/schemas/: __init__.py  alarm.py  analytics.py  auth.py  dashboard.py  device.py  edge.py  health.py  system.py
scripts/: enable-docker-wsl-admin.ps1  import-secom-demo.py  publish-github.ps1
stream-worker/: Dockerfile  pyproject.toml  requirements.txt
stream-worker/worker/: main.py  rules.py
tests/: test_api.py  test_e2e.py
web/: Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: demoData.ts  main.tsx  styles.css
web/src/app/: App.tsx  AppShell.tsx
web/src/shared/: auth.tsx  format.ts  status.tsx  types.ts
(+12 files in other folders)
